feat: Add teacher management functionality
- Implemented teacher creation, retrieval, updating, and deletion in the backend.
- Added TeacherController with endpoints for managing teachers.
- Created TeacherService and TeacherGameRepository for handling business logic and data access.
- Developed frontend components (Admin Tool) for teacher creation and edition, including forms and validation.
- Integrated teacher assignment to games with appropriate UI and service calls.
- Added unit tests for teacher service and components to ensure functionality.
- Updated tab navigation to include a new Teachers tab for managing teachers.